--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
 :root{
     font-size: 62.5%;
 
-    --hue:190;
+    --hue:170;
     --primary-color: hsl(var(--hue), 100%, 26%);
-    --Primary-color-green-light: hsl(calc(var(--hue) - 22 ), 23%, 89%);
+    --Primary-color-light: hsl(calc(var(--hue) - 22 ), 23%, 89%);
     --primary-color-brand-beige: hsl(calc(var(--hue) - 131 ), 100%, 97%);
-    --primary-color-green-light-1: hsl(calc(var(--hue) + 10), 14%, 97%);
+    --primary-color-light-1: hsl(calc(var(--hue) + 10), 14%, 97%);
 
     --dark-color: hsl(var(--hue), 100%, 14%);
     --secondary-color-white: hsl(0, 0%, 100%);
@@ -422,7 +422,7 @@ footer {
     width: 100vw;
     text-align: left;
 
-    color: var(--secondary-color-white);
+    color: var(--primary-color-brand-beige);
 }
 
 footer a.logo {
@@ -478,6 +478,17 @@ a.show {
     .wrapper {
         width: min(112rem, 100%);
         display: grid;
+    }
+    body {
+        overflow: auto;
+    }
+
+    section {
+        padding-block: 16rem;
+    }
+    section header h2 {
+        font-size: 4rem;
+        line-height: 5.208rem;
     }
     /* ========== NAVIGATION ================= */
                  /* RESET */
@@ -537,7 +548,7 @@ a.show {
     }
     
     nav#navigation.scroll .menu li a {
-        color: var(--primary-color-green-light-1);
+        color: var(--primary-color-light-1);
         opacity: 0.6;
     }
 
@@ -583,7 +594,7 @@ a.show {
         transition: width .5s
     }
     nav#navigation.scroll .menu li a::after{
-        background-color: var(--primary-color-green-light-1);
+        background-color: var(--primary-color-light-1);
     }
 
     nav#navigation .menu li a.active::after,
@@ -641,5 +652,21 @@ a.show {
         height: calc(79% + var(--nav-height));
     
     }
+    /* ==========  SERVICES  ================= */
+    section#services .cards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 4rem;
+    }
+    section#services .card {
+        width: 30%;
+        flex-grow: 1;
+    }
 
+    section#services h2 {
+        width: 49.7rem;
+        margin-inline: auto;
+    }
+
+    /*===== ABOUT ================================*/
 }
